# NoopBootstrap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt
data/models/: cube.glb  quad.glb
shaders/: pos.vert  single_color.frag  sprite.vert  texture.frag
src/: CMakeLists.txt  InputType.incl  camera.h  cube.h  gl_structs.h  gl_util.h  graphics_util.h  main.cpp  main.h  math_structs.h  model.h  platform.cpp  platform.h  shader_program.h  simple_vertex_atts.h  texture.h  types.h  util.h
